# shi

./: .gitignore  CLAUDE.md  ExecFlow.md  IMPLEMENTATION_STATUS.md  MATHEMATICAL_TEST_FINDINGS.md  PROJECT_EXPLANATION.md  README.md  REFACTORING_SUMMARY.md  TEST_FINDINGS.md  Tasks.md  install.sh  morphos.py  morphos.py.new  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.sh  shi.py  shi.py.new  shi_refactored.py  test_orchestrator.py
cache/pixel_wise/pxw_2025-03-03 11:42:37/: reg. 1_abs.txt  reg. 1_scatt.txt
cache/pixel_wise/pxw_2025-03-03 11:43:42/: reg. 1_abs.txt  reg. 1_scatt.txt  reg. 2_abs.txt  reg. 2_scatt.txt
cache/pixel_wise/pxw_2025-03-04 14:00:08/: reg. 1_abs.txt  reg. 1_scatt.txt  reg. 2_abs.txt  reg. 2_scatt.txt
cache/pixel_wise/pxw_2025-03-09 14:02:19/: Cortical bone_abs.txt  Cortical bone_scatt.txt  Soft tissue_abs.txt  Soft tissue_scatt.txt  Trabecular bone_abs.txt  Trabecular bone_scatt.txt
cache/pixel_wise/pxw_2025-04-23 11:44:39/: region1_abs.txt  region1_scatt.txt  region2_abs.txt  region2_scatt.txt
cache/pixel_wise/pxw_2025-04-28 15:31:45/: h_abs.txt  (+5 more)
docs/: README.md
scripts/: avg.py  correcting_stripes.py  correlation.py  dir_ct.py  morphos.py  morphostructural.py
shi-react-web/: README.md
shi-react-web/backend/: main.py  requirements.txt
shi-react-web/frontend/: package-lock.json
src/: angles_correction.py  cli_roi_provider.py  correcting_stripes.py  corrections.py  corrections_ct.py  crop.py  crop_gui.py  crop_tk.py  directories.py  distributions_fit.py  export.py  loading_design.py  math_utils.py  processing_context.py  processing_exceptions.py  processing_interfaces.py  processing_orchestrator.py  spatial_harmonics.py  unwrapping_phase.py  utils.py  web_roi_provider.py
src/post_shi/: morphostructural.py
src/shi_core/: __init__.py  cli.py  config.py  processor.py
tests/: test_angles_correction.py  test_correcting_stripes.py  test_differential_operators_math.py  test_harmonic_identification_math.py  test_phase_unwrapping_math.py  test_spatial_harmonics_math.py
tmp/: crop.txt  harmonics.pkl
(+47 files in other folders)
